--- a/initial_dabase.qmd
+++ b/initial_dabase.qmd
@@ -1,22 +1,40 @@
-## Initial Dataset 2013
+## Combined Dataset 2013-2020
 
 ```{r}
 library(tidyverse)
+cfb_combined <- map_dfr(2013:2020, function(year) {
+	filename <- paste0("archive (1)/cfb", str_sub(year, 3, 4), ".csv")
+	read_csv(filename, show_col_types = FALSE) %>%
+		select(
+			Team,
+			Games,
+			Win,
+			Loss,
+			Fumbles.Recovered,
+			Def.Rank,
+			Def.Plays,
+			Yards.Allowed,
+			Total.TDs.Allowed,
+			Average.Sacks.per.Game,
+			Off.Rank
+		) %>%
+		transmute(
+			Team_Year = paste0(Team, "_", year),
+			Games,
+			Wins = Win,
+			Losses = Loss,
+			Fumbles_Recovered = Fumbles.Recovered,
+			Defensive_Rank = Def.Rank,
+			Defensive_Plays = Def.Plays,
+			Yards_Allowed = Yards.Allowed,
+			Total_TDs_Allowed = Total.TDs.Allowed,
+			Avg_Sacks_Per_Game = Average.Sacks.per.Game,
+			Offensive_Rank = Off.Rank
+		)
+})
 
-cfb13_subset <- read_csv("archive (1)/cfb13.csv") %>%
-	transmute(
-		Team,
-		Games,
-		Wins = Win,
-		Losses = Loss,
-		Fumbles_Recovered = Fumbles.Recovered,
-		Defensive_Rank = Def.Rank,
-		Defensive_Plays = Def.Plays,
-		Yards_Allowed = Yards.Allowed,
-		Total_TDs_Allowed = Total.TDs.Allowed,
-		Avg_Sacks_Per_Game = Average.Sacks.per.Game,
-		Offensive_Rank = Off.Rank
-	)
+# Save the combined dataset to CSV
+write_csv(cfb_combined, "cfb_combined_2013_2020.csv")
 
-head(cfb13_subset)
+head(cfb_combined)
 ```
