--- a/written-report.qmd
+++ b/written-report.qmd
@@ -33,3 +33,20 @@ Below is a table of defintions of key variables
 | **Avg_Sacks_Per_Game** | Average number of quarterback sacks per game |
 | **Offensive_Rank** | Team's overall offensive ranking (lower number = better offense) |
 
+## Results
+
+To test the strength of the relationship between the number of wins, the dependent variable, and defensive statistics, the independent variables, we used linear regression tests. The linear regression visualizations, regression equations, and the R-squared value helped answer the research question, “Does defense win championships,” by showing how defensive statistics impact the number of wins, providing the answer of whether or not defense correlates to winning championships. These tests quantify how much each defensive statistic, namely fumbles recovered, defensive rank, defensive plays, yards allowed, total touchdowns allowed, and average sacks per game, had the most effect on wins.
+
+For context, the linear regression model visualizes the strength of each relationship, and the regression equations show mathematical relationships, quantifying how changes in the independent variable affects the dependent variable. Positive coefficients signify a direct relationship while negative coefficients represent indirect relationships.
+
+The results of the testing is as follows:
+
+The regression equation for fumbles recovered is Wins = 4.2453 + 0.2633x, and the R-squared value is 0.074. The regression equation for defensive rank is Wins = 9.4977 + -0.048x, with 0.3122 as the R-squared value. For defensive plays, the equation is Wins = -1.9824 + 0.0098x, and the R-squared value is 0.1934. Wins = 6.3529 is the regression equation for yards allowed, with an R-squared value of zero. For total touchdowns allowed, the regression equation is Wins = 10.4973 + -0.0967x, and the R-squared value is 0.1397. Lastly, the regression equation for average sacks per game is Wins = 9.9669 + -1.6792x, and the R-squared value is 0.1593. The graphs with all three components are shown below:
+
+![](images/clipboard-2375400340.png)
+
+Looking at these graphs, the results point to several interpretations about the defensive statistics’ effects on wins. Each visualization and regression equation displays the expected direct or indirect relationships, except for yards allowed, which reveals a flat line with no coefficient in the equation. The line is flat not due to a coding issue or data error but rather because almost no linear relationship exists between yards allowed and wins. Meanwhile, the other variables show logical relationships. For example, defensive plays have a positive equation coefficient and apositive visualization slope, revealing its direct relationship with number of wins. This finding is logical because more defensive plays results in fewer points awarded to the opposing team, reducing the likelihood of being outscored, which results in a higher chance of winning the game.
+
+Furthermore, no R-squared value reached 0.5, meaning the defensive statistics lack a strong correlation to the number of wins. In other words, though they play a role, defensive statistics alone do not determine wins. Fumbles recovered has the second least R-squared value because fumble recovery mostly relies on chance. The most shocking result, however, is yards allowed having an R-squared value of zero, but there are explanations. First, in NCAA football, games are won by points. Two defenses could allow the same yards but different numbers of points, resulting in varying numbers of wins. Additionally, yardage poorly measures defensive effectiveness because number of points and situational plays matter more. Because of these factors, the R-squared value, linear regression visualization, and regression equation become null.
+
+Ultimately, the linear regression visualizations and regression equations show that better defensive statistics possess a strong relationship with a higher number of wins, but the R-squared values show that they do not correlate strongly enough to be the driving force.
