--- a/written-report.qmd
+++ b/written-report.qmd
@@ -33,7 +33,7 @@ Below is a table of defintions of key variables
 | **Avg_Sacks_Per_Game** | Average number of quarterback sacks per game |
 | **Offensive_Rank** | Team's overall offensive ranking (lower number = better offense) |
 
-## Descriptive Statistics
+### Descriptive Statistics
 Here are some of the descriptive statistics highlights using the information regarding college football from the 2013 through 2020 seasons.
 ![DS](stat-project/images/descstats.png) 
 Most of the medians and means for these values are pretty close, meaning the data is not very skewed in either direction. Wins and losses are an interesting data point as not every team played the same number of games. One data point with a somewhat noticeable skew is defensive plays, being skewed towards fewer defensive plays. This makes sense as "splash plays" are less common.
@@ -58,3 +58,10 @@ Looking at these graphs, the results point to several interpretations about the 
 Furthermore, no R-squared value reached 0.5, meaning the defensive statistics lack a strong correlation to the number of wins. In other words, though they play a role, defensive statistics alone do not determine wins. Fumbles recovered has the second least R-squared value because fumble recovery mostly relies on chance. The most shocking result, however, is yards allowed having an R-squared value of zero, but there are explanations. First, in NCAA football, games are won by points. Two defenses could allow the same yards but different numbers of points, resulting in varying numbers of wins. Additionally, yardage poorly measures defensive effectiveness because number of points and situational plays matter more. Because of these factors, the R-squared value, linear regression visualization, and regression equation become null.
 
 Ultimately, the linear regression visualizations and regression equations show that better defensive statistics possess a strong relationship with a higher number of wins, but the R-squared values show that they do not correlate strongly enough to be the driving force.
+
+## discussion & conclusion
+
+### discussion
+It seems based on the statistical tests run on the data that good defense does positively impact wins in college football, but is not the only factor determining wins. The linear regressions show strong correlation between good defense and good wins, however the R^2 values show that the correlation is strong enough to call defense the main factor in whether a college football team will win their game. It is good for teams to work on a strong defense, but it seems there are other areas of the team that can't be ignored. Football data presents a challenge in seperating variables as variables such as yards allowed and touch downs allowed are definitely connected to each other. There is also no way to claim causation as there are many unnacounted for variables in football that could affect performance, such as loud fans are bad weather. The only thing we can look at regarding college football is correlation.
+
+
