--- a/written-report.qmd
+++ b/written-report.qmd
@@ -64,6 +64,6 @@ Furthermore, no R-squared value reached 0.5, meaning the defensive statistics la
 Ultimately, the linear regression visualizations and regression equations show that better defensive statistics possess a strong relationship with a higher number of wins, but the R-squared values show that they do not correlate strongly enough to be the driving force.
 
 ## Discussion
-It seems based on the statistical tests run on the data that good defense does positively impact wins in college football, but is not the only factor determining wins. The linear regressions show strong correlation between good defense and good wins, however the R^2 values show that the correlation is strong enough to call defense the main factor in whether a college football team will win their game. It is good for teams to work on a strong defense, but it seems there are other areas of the team that can't be ignored. Football data presents a challenge in seperating variables as variables such as yards allowed and touch downs allowed are definitely connected to each other. There is also no way to claim causation as there are many unnacounted for variables in football that could affect performance, such as loud fans are bad weather. The only thing we can look at regarding college football is correlation.
+It seems based on the statistical tests run on the data that good defense does positively impact wins in college football, but is not the only factor determining wins. The linear regressions show strong correlation between good defense and good wins, however the R^2 values show that the correlation is strong enough to call defense the main factor in whether a college football team will win their game. It is good for teams to work on a strong defense, but it seems there are other areas of the team that can't be ignored. Football data presents a challenge in seperating variables as variables such as yards allowed and touch downs allowed are definitely connected to each other. There is also no way to claim causation as there are many unnacounted for variables in football that could affect performance, such as loud fans are bad weather. The only thing we can look at regarding college football is correlation. One way we could improve this limitation is by looking further into which variables have the highest correlation to number of wins to test which has the most impact rather than focusing on causality or through further testing. For future work, some ideas could include testing other variables such as weather, which conference the team is in, and whether the game was close or a blowout.
 
 
