--- a/written-report.qmd
+++ b/written-report.qmd
@@ -48,7 +48,7 @@ To test the strength of the relationship between the number of wins, the depende
 
 For context, the linear regression model visualizes the strength of each relationship, and the regression equations show mathematical relationships, quantifying how changes in the independent variable affects the dependent variable. Positive coefficients signify a direct relationship while negative coefficients represent indirect relationships.
 
-On top of this, we used a t-test to determine the probability that the standard deviation of (defensive rank)/(wins) was equal to zero. To get the dataset for this test, we grouped 110 datapoints into groups of 5 (excluding the 111th datapoint that required dividing by zero) and calculated the standard deviation of each group, which resulted in a dataset of 10 values. Then, we used the built-in t-test to determine the probability that the mean standard deviation was equal to zero.
+On top of this, we used a t-test to determine the probability that the standard deviation of (defensive rank)/(wins) was equal to zero. To get the dataset for this test, we grouped 110 datapoints into groups of 5 (excluding the 111th datapoint that required dividing by zero) and calculated the standard deviation of each group, which resulted in a dataset of 10 values. Then, we used the built-in t-test to determine the probability that the mean standard deviation was equal to zero. Our null hypothesis for this test was that defensive rank affects all teams equally, and our alternative hypothesis was that defensive rank has a significantly different level of impact on each team.
 
 ## Results
 
@@ -64,6 +64,8 @@ Looking at these graphs, the results point to several interpretations about the 
 Furthermore, no R-squared value reached 0.5, meaning the defensive statistics lack a strong correlation to the number of wins. In other words, though they play a role, defensive statistics alone do not determine wins. Fumbles recovered has the second least R-squared value because fumble recovery mostly relies on chance. The most shocking result, however, is yards allowed having an R-squared value of zero, but there are explanations. First, in NCAA football, games are won by points. Two defenses could allow the same yards but different numbers of points, resulting in varying numbers of wins. Additionally, yardage poorly measures defensive effectiveness because number of points and situational plays matter more. Because of these factors, the R-squared value, linear regression visualization, and regression equation become null.
 
 Ultimately, the linear regression visualizations and regression equations show that better defensive statistics possess a strong relationship with a higher number of wins, but the R-squared values show that they do not correlate strongly enough to be the driving force.
+
+
 
 ## Discussion
 It seems based on the statistical tests run on the data that good defense does positively impact wins in college football, but is not the only factor determining wins. The linear regressions show strong correlation between good defense and good wins, however the R^2 values show that the correlation is strong enough to call defense the main factor in whether a college football team will win their game. It is good for teams to work on a strong defense, but it seems there are other areas of the team that can't be ignored. Football data presents a challenge in seperating variables as variables such as yards allowed and touch downs allowed are definitely connected to each other. There is also no way to claim causation as there are many unnacounted for variables in football that could affect performance, such as loud fans are bad weather. The only thing we can look at regarding college football is correlation. One way we could improve this limitation is by looking further into which variables have the highest correlation to number of wins to test which has the most impact rather than focusing on causality or through further testing. For future work, some ideas could include testing other variables such as weather, which conference the team is in, and whether the game was close or a blowout.
