--- a/written-report.qmd
+++ b/written-report.qmd
@@ -52,7 +52,7 @@ On top of this, we used a t-test to determine the probability that the standard 
 
 ## Results
 
-The results of the linear regression testing are as follows:
+The results of the linear regression testing were as follows:
 
 The regression equation for fumbles recovered is Wins = 4.2453 + 0.2633x, and the R-squared value is 0.074. The regression equation for defensive rank is Wins = 9.4977 + -0.048x, with 0.3122 as the R-squared value. For defensive plays, the equation is Wins = -1.9824 + 0.0098x, and the R-squared value is 0.1934. Wins = 6.3529 is the regression equation for yards allowed, with an R-squared value of zero. For total touchdowns allowed, the regression equation is Wins = 10.4973 + -0.0967x, and the R-squared value is 0.1397. Lastly, the regression equation for average sacks per game is Wins = 9.9669 + -1.6792x, and the R-squared value is 0.1593. The graphs with all three components are shown below:
 
@@ -64,6 +64,8 @@ Looking at these graphs, the results point to several interpretations about the 
 Furthermore, no R-squared value reached 0.5, meaning the defensive statistics lack a strong correlation to the number of wins. In other words, though they play a role, defensive statistics alone do not determine wins. Fumbles recovered has the second least R-squared value because fumble recovery mostly relies on chance. The most shocking result, however, is yards allowed having an R-squared value of zero, but there are explanations. First, in NCAA football, games are won by points. Two defenses could allow the same yards but different numbers of points, resulting in varying numbers of wins. Additionally, yardage poorly measures defensive effectiveness because number of points and situational plays matter more. Because of these factors, the R-squared value, linear regression visualization, and regression equation become null.
 
 Ultimately, the linear regression visualizations and regression equations show that better defensive statistics possess a strong relationship with a higher number of wins, but the R-squared values show that they do not correlate strongly enough to be the driving force.
+
+The results of the t-test were as follows:
 
 
 
